deploy/staging/environment-variables.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplified-onboarding-api
  labels:
    app: simplified-onboarding-api
spec:
  selector:
    matchLabels:
      app: simplified-onboarding-api
  template:
    spec:
      containers:
        - name: simplified-onboarding-api
