deploy/staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplified-onboarding-api
spec:
  ingressClassName: nginx
  rules:
    - host: simplified-onboarding-api.staging.fellesdatakatalog.digdir.no
      http:
        paths:
          - backend:
              service:
                name: simplified-onboarding-api
                port:
                  number: 8080
            path: /
            pathType: Prefix
